syntax = "proto3";
package hall;

//request
message HallRequest {
    int32 session = 1;  //消息序号

    //-----------------大厅模块接口---------------
    oneof request {

        quick_match quickMatch = 5;  //快速匹配
    }
}

//response
message HallResponse {
    int32 session = 1;  //消息序号

    //-----------------大厅模块接口---------------
    oneof response {
        uint32 exception = 3;

        quick_match_ret quickMatchRet = 5;  //快速匹配结果

    }

    //quick_match_result quickMatchPush = 10;
}


//----------------------------------

enum hall_result {
    success = 0;                    //操作成功
}

message quick_match {
    int64  uid = 1; //玩家id
    string gameID = 2; //游戏id  平台分配
}

message quick_match_ret {
    hall_result result = 1;
    quick_match_result matchResult = 2;
}

message cancel_match {
    int64 uid = 1; //玩家id
    string gameID = 2; //游戏id  平台分配
}

message cancel_match_ret {
    hall_result result = 1;
}

//快速匹配推送
message quick_match_result {
    string roomID = 1;   //房间id
    string token = 2;    //连接token
    string address = 3;  //房间服务器地址
}